k8s/1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #{VAR_ENV_K8S_DEPLOY_NAME}#
  namespace: #{VAR_ENV_K8S_NS_NAME}#
  labels:
    # K8s standard
    app.kubernetes.io/name: #{VAR_ENV_K8S_DEPLOY_NAME}#
    app.kubernetes.io/instance: #{VAR_ENV_K8S_DEPLOY_NAME}#
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/part-of: #{VAR_ENV_K8S_NS_NAME}#
    app.kubernetes.io/managed-by: helm

    # Governance
    environment: dev
    team: devops
    owner: #{VAR_ENV_K8S_DEPLOY_OWNER}#

    # Observability
    observability.logs: "true"
    observability.metrics: "true"
    observability.traces: "true"

    # Release
    git.sha: "latest"
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: #{VAR_ENV_K8S_DEPLOY_NAME}#
      app.kubernetes.io/instance: #{VAR_ENV_K8S_DEPLOY_NAME}#
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: #{VAR_ENV_K8S_DEPLOY_NAME}#
        app.kubernetes.io/instance: #{VAR_ENV_K8S_DEPLOY_NAME}#
        app.kubernetes.io/version: "1.0"
        app.kubernetes.io/part-of: #{VAR_ENV_K8S_NS_NAME}#
        app.kubernetes.io/managed-by: helm

        environment: dev
        team: devops
        owner: #{VAR_ENV_K8S_DEPLOY_OWNER}#

        observability.logs: "true"
        observability.metrics: "true"
        observability.traces: "true"

        git.sha: "latest"
    spec:
      containers:
        - name: #{VAR_ENV_K8S_DEPLOY_CONTAINER_NAME}#
          image: ghcr.io/#{VAR_ENV_K8S_DEPLOY_OWNER}#/#{VAR_ENV_K8S_DEPLOY_IMAGE_NAME}#:#{VAR_ENV_K8S_DEPLOY_IMAGE_TAG}#
          imagePullPolicy: Always
          ports:
           - name: http
             containerPort: #{VAR_ENV_K8S_DEPLOY_CONTAINER_PORT}#
             protocol: TCP
          resources:
            requests:
              cpu: #{VAR_ENV_K8S_DEPLOY_REQUESTS_CPU}#
              memory: #{VAR_ENV_K8S_DEPLOY_REQUESTS_MEMORY}#
            limits:
              cpu: #{VAR_ENV_K8S_DEPLOY_LIMITS_CPU}#
              memory: #{VAR_ENV_K8S_DEPLOY_LIMITS_MEMORY}#
